--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
 					<h3>Premio Sócrates 2025</h3>
 					<div class="video-wrap">
 						<iframe
-							src="https://www.youtube.com/embed/sRveBglJEqA"
+							src="https://www.youtube.com/embed/sRveBglJEqA?feature=oembed"
 							title="Premio Sócrates 2025 por labor social"
-							loading="lazy"
+							loading="eager"
 							referrerpolicy="strict-origin-when-cross-origin"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 							allowfullscreen>
