--- a/index.html
+++ b/index.html
@@ -250,6 +250,51 @@
 			border: 0;
 		}
 
+		.video-link {
+			display: grid;
+			gap: 10px;
+			color: inherit;
+			text-decoration: none;
+		}
+
+		.video-thumb {
+			position: relative;
+			border-radius: 16px;
+			overflow: hidden;
+			aspect-ratio: 16 / 9;
+			border: 1px solid rgba(0, 0, 0, 0.07);
+			background: #111;
+		}
+
+		.video-thumb img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			display: block;
+		}
+
+		.video-thumb::after {
+			content: "▶";
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			width: 56px;
+			height: 56px;
+			display: grid;
+			place-items: center;
+			border-radius: 999px;
+			background: rgba(0, 0, 0, 0.62);
+			color: #fff;
+			font-size: 1.05rem;
+		}
+
+		.video-note {
+			margin: 0;
+			color: var(--muted);
+			font-size: 0.9rem;
+		}
+
 
 		.impact h2:first-of-type,
 		.impact p:first-of-type {
@@ -273,17 +318,34 @@
 		}
 
 		@media (max-width: 920px) {
+			body {
+				padding: 20px 12px 34px;
+			}
+
 			.page {
 				grid-template-columns: 1fr;
-				gap: 14px;
+				gap: 10px;
+				width: 100%;
 			}
 
 			.hero,
 			.logo-card,
 			.photo-card,
 			.values,
-			.impact {
+			.impact,
+			.video-card {
 				grid-column: 1 / -1;
+			}
+
+			.card {
+				padding: 18px;
+				border-radius: 16px;
+				box-shadow: 0 6px 16px rgba(0, 0, 0, 0.06);
+			}
+
+			.card:hover {
+				transform: none;
+				box-shadow: 0 6px 16px rgba(0, 0, 0, 0.06);
 			}
 
 			.logo-card,
@@ -291,20 +353,73 @@
 				min-height: auto;
 			}
 
+			.logo-card {
+				padding: 14px;
+			}
+
+			.logo-card img {
+				max-width: 220px;
+				border-radius: 14px;
+			}
+
 			.photo-card {
-				min-height: 240px;
+				min-height: auto;
+				padding: 8px;
+			}
+
+			.photo-card img {
+				min-height: 220px;
+				aspect-ratio: 4 / 3;
+				border-radius: 14px;
+				object-position: center 18%;
 			}
 
 			.impact {
 				grid-template-columns: 1fr;
+				padding: 18px;
+			}
+
+			.values h2,
+			.impact h2,
+			.video-card h2 {
+				font-size: 1.08rem;
+			}
+
+			.hero p,
+			.pillar p,
+			.impact p,
+			.video-card p,
+			.video-note {
+				font-size: 0.9rem;
+				line-height: 1.5;
+			}
+
+			.pillars {
+				gap: 6px;
+			}
+
+			.pillar {
+				padding: 12px;
 			}
 
 			.video-card {
-				grid-column: 1 / -1;
+				padding: 18px;
 			}
 
 			.video-grid {
 				grid-template-columns: 1fr;
+				gap: 10px;
+			}
+
+			.video-thumb,
+			.video-wrap {
+				border-radius: 12px;
+			}
+
+			.video-thumb::after {
+				width: 44px;
+				height: 44px;
+				font-size: 0.95rem;
 			}
 
 			.impact h2:first-of-type,
@@ -315,11 +430,42 @@
 			}
 
 			.hero {
-				padding: 26px;
+				padding: 20px;
+				gap: 14px;
 			}
 
 			.hero h1 {
-				font-size: clamp(1.8rem, 7vw, 2.35rem);
+				font-size: clamp(1.65rem, 8vw, 2.1rem);
+				letter-spacing: -0.03em;
+			}
+
+			.cta {
+				width: 100%;
+				text-align: center;
+				padding: 12px 16px;
+			}
+		}
+
+		@media (max-width: 420px) {
+			body {
+				padding: 14px 10px 26px;
+			}
+
+			.card {
+				padding: 14px;
+				border-radius: 14px;
+			}
+
+			.hero {
+				padding: 16px;
+			}
+
+			.hero h1 {
+				font-size: 1.55rem;
+			}
+
+			.video-note {
+				font-size: 0.86rem;
 			}
 		}
 
@@ -403,16 +549,12 @@
 				</article>
 				<article class="video-item">
 					<h3>Premio Sócrates 2025</h3>
-					<div class="video-wrap">
-						<iframe
-							src="https://www.youtube.com/embed/sRveBglJEqA?feature=oembed"
-							title="Premio Sócrates 2025 por labor social"
-							loading="eager"
-							referrerpolicy="strict-origin-when-cross-origin"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-							allowfullscreen>
-						</iframe>
-					</div>
+					<a class="video-link" href="https://www.youtube.com/watch?v=sRveBglJEqA" target="_blank" rel="noopener noreferrer" aria-label="Ver Premio Sócrates 2025 en YouTube">
+						<div class="video-thumb">
+							<img src="https://i.ytimg.com/vi/sRveBglJEqA/hqdefault.jpg" alt="Miniatura del video Premio Sócrates 2025">
+						</div>
+						<p class="video-note">Este video tiene reproducción embebida restringida. Ábrelo en YouTube.</p>
+					</a>
 				</article>
 			</div>
 		</section>
