--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main class="container">
         <header class="glass-card hero reveal">
-            <div class="badge">Fútbol y Sociedad</div>
+            <div class="badge">La Princesa de Cataluña</div>
             <h1>Del dolor a la <br><span>esperanza.</span></h1>
             <p>Cómo la comunidad del fútbol se unió para transformar una tragedia personal en un movimiento de acompañamiento vital a través de la Fundación Xana.</p>
         </header>
@@ -127,7 +127,7 @@
                 Visitar Fundación Xana
                 <span class="arrow">→</span>
             </a>
-            <small>Proyecto Escolar de Investigación 2026</small>
+            <small></small>
         </footer>
     </main>
 
